Fixed spacing on mainpage

--- a/src/CSS/mainpage.css
+++ b/src/CSS/mainpage.css
@@ -2,6 +2,7 @@
   list-style-type: none;
   height: 100%;
   display: flex;
+  margin-left: 100px;
   justify-content: space-evenly;
   width: 50%;
   flex-direction: row;
@@ -10,7 +11,7 @@
 .navbarOption {
   display: inline;
   float: left;
-  width: 150px;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -45,6 +46,7 @@
   border-radius: 0px;
   background: none;
   width: 100%;
+  overflow: hidden;
 }
 
 .selector {
